syntax = "proto3";

package com.silong.foundation.springboot.starter.raft.service.generated;

option java_multiple_files = true;
option java_outer_classname = "GeneratedRaftGrpcService";

//日志条目
message LogEntry{
  uint32 term = 1;
  repeated bytes cmd = 2;
}

//追加日志或心跳消息
message Request4AppendLogEntries{
  uint32 term = 1;
  string leaderId = 2;
  uint32 prevLogIndex = 3;
  uint32 prevLogTerm = 4;
  uint32 leaderCommit = 5;
  repeated LogEntry entries = 6;
}

//追加日志或心跳响应
message Response4AppendEntries{
  uint32 term = 1;
  bool  success = 2;
}

//选举投票请求
message Request4Vote {
  uint32 term = 1;
  string candidateId = 2;
  uint32 lastLogIndex = 3;
  uint32 lastLogTerm = 4;
}

//选举投票响应
message Response4Vote {
  uint32  term = 1;
  bool voteGranted = 2;
}

//服务接口定义
service RaftService {
  //追加日志和握手接口
  rpc appendEntries (Request4AppendLogEntries) returns (Response4AppendEntries){};

  //选举投票接口
  rpc vote (Request4Vote) returns (Response4Vote) {};
}

